I may have been saving all of my work to the rigid pendulum repository. I hope not, but this one was simple

--- a/getting_started_with_colab.ipynb
+++ b/getting_started_with_colab.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMQzx5ALyoWMT68Pf8x3P+l"
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -82,13 +81,37 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "Hello, i'm peyton."
+      ],
       "metadata": {
-        "id": "jt_WW0s6_z_f"
+        "id": "6mZLboJvWPIU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#\n",
+        "print(\"Nice to meet you!\")"
+      ],
+      "metadata": {
+        "id": "jt_WW0s6_z_f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "71f5b9d8-ae3f-42a5-ee2d-790a908e0934"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nice to meet you!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -150,12 +173,27 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "x = \"peyton\"\n",
+        "print(\"Hello, \"+ x + \"!\")\n"
+      ],
       "metadata": {
-        "id": "5QW0P4Vw_yQ_"
+        "id": "5QW0P4Vw_yQ_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0877ebe0-5629-410a-ea6b-dbc3620778ac"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello, peyton!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -220,12 +258,35 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "a = 2\n",
+        "b = 4\n",
+        "c = 6\n",
+        "d = 8\n",
+        "e = 10\n",
+        "numbers = [2,4,6,8,10]\n",
+        "print(sum(numbers))\n",
+        "print(sum(numbers)/len(numbers))"
+      ],
       "metadata": {
-        "id": "Jc7TWeTm3kX6"
+        "id": "Jc7TWeTm3kX6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "collapsed": true,
+        "outputId": "b1fa0c47-0c89-4d11-9d7c-adf8460f9289"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "30\n",
+            "6.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -264,9 +325,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NRrnm3SE4NFM",
-        "outputId": "78f52877-7b07-4646-e5c6-10912ca7966a"
+        "outputId": "1335414d-d946-4fef-d3b9-02c33b8bfef0"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -291,6 +352,70 @@
       "metadata": {
         "id": "K0awzQVL5LJ8"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "number = 67\n",
+        "a_list = [1, 2, 3]\n",
+        "name = \"Peyton\"\n",
+        "print(type(number))\n",
+        "print(type(a_list))\n",
+        "print(type(name))\n",
+        "print(dir(name)[:15])\n",
+        "print(help(str.upper))\n",
+        "print(help(str.split))\n",
+        "str?\n",
+        "str??"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kcxoG-IZg5BR",
+        "outputId": "faee4998-3943-445d-c443-fb27283bcd40"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'int'>\n",
+            "<class 'list'>\n",
+            "<class 'str'>\n",
+            "['__add__', '__class__', '__contains__', '__delattr__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__getnewargs__', '__getstate__', '__gt__', '__hash__']\n",
+            "Help on method_descriptor:\n",
+            "\n",
+            "upper(self, /) unbound builtins.str method\n",
+            "    Return a copy of the string converted to uppercase.\n",
+            "\n",
+            "None\n",
+            "Help on method_descriptor:\n",
+            "\n",
+            "split(self, /, sep=None, maxsplit=-1) unbound builtins.str method\n",
+            "    Return a list of the substrings in the string, using sep as the separator string.\n",
+            "\n",
+            "      sep\n",
+            "        The separator used to split the string.\n",
+            "\n",
+            "        When set to None (the default value), will split on any whitespace\n",
+            "        character (including \\n \\r \\t \\f and spaces) and will discard\n",
+            "        empty strings from the result.\n",
+            "      maxsplit\n",
+            "        Maximum number of splits.\n",
+            "        -1 (the default value) means no limit.\n",
+            "\n",
+            "    Splitting starts at the front of the string and works to the end.\n",
+            "\n",
+            "    Note, str.split() is mainly useful for data that has been intentionally\n",
+            "    delimited.  With natural text that includes punctuation, consider using\n",
+            "    the regular expression module.\n",
+            "\n",
+            "None\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -349,12 +474,27 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "my_variable = \"I fixed it!\"\n",
+        "print(my_variable)"
+      ],
       "metadata": {
-        "id": "XXLgNKki6Gkg"
+        "id": "XXLgNKki6Gkg",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "77feee99-0a91-43b0-daa3-7623ea99ab96"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I fixed it!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
