--- a/getting_started_with_colab.ipynb
+++ b/getting_started_with_colab.ipynb
@@ -520,23 +520,18 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 166
+          "base_uri": "https://localhost:8080/"
         },
         "id": "eCIwjEaT7Fa_",
-        "outputId": "4257f499-40ad-4be3-d5c5-0eb14a2f8fd8"
+        "outputId": "5a78a27a-c1f8-4a88-9480-5ac576dac7fc"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'my_pet' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-4209057521.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Run this second\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_pet\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'my_pet' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "cat\n"
           ]
         }
       ]
@@ -550,7 +545,7 @@
       "metadata": {
         "id": "5WCzLhBR-R1s"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -572,11 +567,36 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(my_variable)"
+      ],
       "metadata": {
-        "id": "DdcQPO4kAQfC"
+        "id": "DdcQPO4kAQfC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "06343e5f-4885-4218-c9d8-36e69f7c85a4"
       },
-      "execution_count": null,
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_variable = \"Hello!\""
+      ],
+      "metadata": {
+        "id": "FXn2htuRoyoT"
+      },
+      "execution_count": 5,
       "outputs": []
     },
     {
