--- a/getting_started_with_colab.ipynb
+++ b/getting_started_with_colab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQzx5ALyoWMT68Pf8x3P+l"
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/IntroComputationalPhysics-UNT/getting-started-with-python-in-colab-Mattmflores/blob/main/getting_started_with_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -82,13 +92,36 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "Hello, my name is Matthew Flores"
+      ],
       "metadata": {
-        "id": "jt_WW0s6_z_f"
+        "id": "e_ZIm76ExGLN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Nice to meet you!\")"
+      ],
+      "metadata": {
+        "id": "jt_WW0s6_z_f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d4052678-a324-4d28-f0a8-f1b4c4cc22a8"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nice to meet you!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -150,7 +183,10 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "name = \"Matthew Flores\"\n",
+        "print(\"Hello, \" + name + \"!\")"
+      ],
       "metadata": {
         "id": "5QW0P4Vw_yQ_"
       },
