chore: complete exercise 3

--- a/getting_started_with_colab.ipynb
+++ b/getting_started_with_colab.ipynb
@@ -256,12 +256,29 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "numbers = [1, 2, 3, 4, 5]\n",
+        "print(sum(numbers))\n",
+        "print(sum(numbers)/len(numbers))"
+      ],
       "metadata": {
-        "id": "Jc7TWeTm3kX6"
+        "id": "Jc7TWeTm3kX6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "05a0d35e-cbb1-4cbf-a1bd-9afba7de2109"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "15\n",
+            "3.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
