--- a/getting_started_with_colab.ipynb
+++ b/getting_started_with_colab.ipynb
@@ -346,6 +346,80 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "#1.\n",
+        "number = 1\n",
+        "numbers = [1, 2, 3]\n",
+        "name = \"Matthew Flores\"\n",
+        "\n",
+        "print(type(number))\n",
+        "print(type(numbers))\n",
+        "print(type(name))\n",
+        "\n",
+        "#2.\n",
+        "print(dir(name))\n",
+        "print(name.upper())\n",
+        "print(name.replace(\"Matthew\", \"Matt\"))\n",
+        "\n",
+        "#3.\n",
+        "help(list.append)\n",
+        "help(str.split)\n",
+        "\n",
+        "#4.\n",
+        "str?\n",
+        "str??"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6nsUTCxLz2OX",
+        "outputId": "ba40b100-f0c1-4699-a35a-63698ea51a55"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'int'>\n",
+            "<class 'list'>\n",
+            "<class 'str'>\n",
+            "['__add__', '__class__', '__contains__', '__delattr__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__getnewargs__', '__getstate__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__iter__', '__le__', '__len__', '__lt__', '__mod__', '__mul__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__rmod__', '__rmul__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', 'capitalize', 'casefold', 'center', 'count', 'encode', 'endswith', 'expandtabs', 'find', 'format', 'format_map', 'index', 'isalnum', 'isalpha', 'isascii', 'isdecimal', 'isdigit', 'isidentifier', 'islower', 'isnumeric', 'isprintable', 'isspace', 'istitle', 'isupper', 'join', 'ljust', 'lower', 'lstrip', 'maketrans', 'partition', 'removeprefix', 'removesuffix', 'replace', 'rfind', 'rindex', 'rjust', 'rpartition', 'rsplit', 'rstrip', 'split', 'splitlines', 'startswith', 'strip', 'swapcase', 'title', 'translate', 'upper', 'zfill']\n",
+            "MATTHEW FLORES\n",
+            "Matt Flores\n",
+            "Help on method_descriptor:\n",
+            "\n",
+            "append(self, object, /) unbound builtins.list method\n",
+            "    Append object to the end of the list.\n",
+            "\n",
+            "Help on method_descriptor:\n",
+            "\n",
+            "split(self, /, sep=None, maxsplit=-1) unbound builtins.str method\n",
+            "    Return a list of the substrings in the string, using sep as the separator string.\n",
+            "\n",
+            "      sep\n",
+            "        The separator used to split the string.\n",
+            "\n",
+            "        When set to None (the default value), will split on any whitespace\n",
+            "        character (including \\n \\r \\t \\f and spaces) and will discard\n",
+            "        empty strings from the result.\n",
+            "      maxsplit\n",
+            "        Maximum number of splits.\n",
+            "        -1 (the default value) means no limit.\n",
+            "\n",
+            "    Splitting starts at the front of the string and works to the end.\n",
+            "\n",
+            "    Note, str.split() is mainly useful for data that has been intentionally\n",
+            "    delimited.  With natural text that includes punctuation, consider using\n",
+            "    the regular expression module.\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## 5. Errors and Resilience\n",
