--- a/getting_started_with_colab.ipynb
+++ b/getting_started_with_colab.ipynb
@@ -476,12 +476,56 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "my_variable = \"I fixed it!\"\n",
+        "print(my_variable)"
+      ],
       "metadata": {
-        "id": "XXLgNKki6Gkg"
+        "id": "XXLgNKki6Gkg",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8a7ea955-d61c-4814-89cd-c34bf8d62e1d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I fixed it!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type_error = \"I am a string\" + 1\n",
+        "print(type_error)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 162
+        },
+        "id": "fyprE6Wo4GmZ",
+        "outputId": "8b136134-6275-49bc-d483-9519dc38a8db"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "can only concatenate str (not \"int\") to str",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-1550835027.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtype_error\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"I am a string\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype_error\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -507,23 +551,18 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 166
+          "base_uri": "https://localhost:8080/"
         },
         "id": "eCIwjEaT7Fa_",
-        "outputId": "4257f499-40ad-4be3-d5c5-0eb14a2f8fd8"
+        "outputId": "d4df8dab-51fb-4935-abad-12ff28717f71"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'my_pet' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-4209057521.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Run this second\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_pet\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'my_pet' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "cat\n"
           ]
         }
       ]
@@ -537,7 +576,7 @@
       "metadata": {
         "id": "5WCzLhBR-R1s"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -558,10 +597,30 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "1. If the second cell defining the pet variable is ran first, there is no error.\n",
+        "\n",
+        "2. If the session is restarted and the first cell is ran first, there is an error due to the variable not being defined yet."
+      ],
+      "metadata": {
+        "id": "FEz7W5AY5Dlh"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
         "id": "DdcQPO4kAQfC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "baup33Y_5n0A"
       },
       "execution_count": null,
       "outputs": []
